# anticompositetools

./: .gitignore  HijackSpam.py  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  service.template  setup.cfg  upgrade.sh  uwsgi.ini
.github/workflows/: codeql-analysis.yml  pythonapp.yml
anticompositetools/: __init__.py
anticompositetools/templates/: hyphenator-output.html
src/: __init__.py  app.py  citeinspector.py  deploy.py  dsalerts.py  filearchive.py  global_linkspam.py  hyphenator.py  movecheck.py  nearfar.py  newautopat.py  paracheck.py  projectnew.py  requirements.txt
src/anticompositetools/: citeinspector.py  deploy.py  filearchive.py  nearfar.py  paracheck.py  projectnew.py
src/anticompositetools/templates/: citeinspector-redirect.html  citeinspector.html  dsalerts_data.html  hyphenator-form.html  layout.html  nearfar_form.html  newautopat_results.html  paracheck.html
src/templates/: citeinspector-diff.html  citeinspector-none.html  citeinspector.html  dsalerts_form.html  filearchive-form.html  filearchive-output.html  hyphenator-form.html  hyphenator-output.html  index.html  layout.html  linkspam.html  linkspam_result.html  linkspam_submit.html  movecheck.html  nearfar_display.html  nearfar_form.html  newautopat_results.html
tests/: test_app.py  test_citeinspector.py  test_deploy.py  test_hyphenator.py  test_init.py  test_movecheck.py  testdata.txt
web/: app.py
web/templates/: layout.html
